chore: organize BE folder, move backend build files under BE/, keep dev version of M files