@@ -1,38 +1,35 @@
 package com.example.demo.controller;
 
-import com.example.demo.service.AzureOpenAiService;
+import com.example.demo.dto.AiSuggestionDto;
+import com.example.demo.service.AiService;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Map;
 
+/**
+ * AI 관련 API 컨트롤러
+ */
 @RestController
 @RequestMapping("/api/v1/ai")
-public class AiController {
+@RequiredArgsConstructor
+public class AIController {
 
-    private final AzureOpenAiService service;
+    private final AiService aiService;
 
-    public AiController(AzureOpenAiService service) {
-        this.service = service;
-    }
-
-    /** 요청 바디 스키마 */
-    public static class PromotionReq {
-        public String prompt;
-        public String size = "1024x1024"; // "256x256" | "512x512" | "1024x1024"
-    }
-
-    /** POST /api/v1/ai/promotions  { "prompt": "...", "size": "512x512" } */
-    @PostMapping("/promotions")
-    public ResponseEntity<Map<String, Object>> createPromotion(@RequestBody PromotionReq req) {
-        if (req == null || req.prompt == null || req.prompt.trim().isEmpty()) {
-            return ResponseEntity.badRequest().body(
-                    Map.of("error", Map.of("code", "BAD_REQUEST", "message", "prompt is required"))
-            );
+    /**
+     * 게시물 내용 기반으로 제목/해시태그 추천
+     * 호출: POST /api/v1/ai/suggestions/post
+     * 전송 데이터: { "content": "여기 파스타 정말 맛있어요..." }
+     */
+    @PostMapping("/suggestions/post")
+    public ResponseEntity<AiSuggestionDto> suggestPostElements(@RequestBody Map<String, String> payload) {
+        String content = payload.get("content");
+        if (content == null || content.isBlank()) {
+            return ResponseEntity.badRequest().build();
         }
-
-        Map<String, Object> result = service.generatePromotionImage(req.prompt.trim(), req.size);
-        Integer http = (Integer) result.remove("_http"); // 서비스가 에러일 때 넣어주는 상태코드
-        return ResponseEntity.status(http == null ? 200 : http).body(result);
+        AiSuggestionDto suggestions = aiService.suggestTitleAndTags(content);
+        return ResponseEntity.ok(suggestions);
     }
 }
